[workspace]

members = [
  "aoc2022-01",
  "aoc2022-02",
  "aoc2022-03",
  "aoc2022-04",
  "aoc2022-05",
  "aoc2022-06",
  "aoc2022-07",
  "aoc2022-08",
  "aoc2022-09",
  "aoc2022-10",
  "aoc2022-11",
  "aoc2022-12",
  "aoc2022-13",
  "aoc2022-14",
  "aoc2022-15",
  "aoc2022-16",
  "aoc2022-17",
  "aoc2022-18",
  "aoc2022-19",
  "aoc2022-20",
  "aoc2022-21",
  "aoc2022-22",
  "aoc2022-23",
  "aoc2022-24",
  "aoc2022-25",
]

[profile.release]
debug = 1
